--- a/index.html
+++ b/index.html
@@ -4,45 +4,75 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Welcome</title>
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8194206365588876" crossorigin="anonymous"></script>
+  <title>Anime Hub</title>
   <style>
     body {
-      font-family: sans-serif;
-      background-color: white;
-      color: #ff6600;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
       margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background: url('https://wallpapercave.com/wp/wp6600441.jpg') no-repeat center center fixed;
+      background-size: cover;
+      color: white;
       text-align: center;
+      padding: 40px 20px;
+    }
+    .container {
+      background-color: rgba(0, 0, 0, 0.7);
+      padding: 30px;
+      border-radius: 15px;
+      max-width: 600px;
+      margin: auto;
     }
     h1 {
-      font-size: 2em;
+      font-size: 2.8em;
+      color: #ffcc00;
       margin-bottom: 20px;
     }
+    p {
+      font-size: 1.1em;
+      margin-bottom: 30px;
+      line-height: 1.5;
+    }
     .link-button {
-      display: block;
-      padding: 15px 30px;
+      display: inline-block;
       margin: 10px;
-      font-size: 1.2em;
-      background-color: #ff6600;
+      padding: 15px 30px;
+      font-size: 1.1em;
       color: white;
+      background-color: #e91e63;
       border: none;
       border-radius: 8px;
       text-decoration: none;
-      transition: background-color 0.3s;
+      transition: background 0.3s ease;
     }
     .link-button:hover {
-      background-color: #e65c00;
+      background-color: #c2185b;
     }
   </style>
 </head>
 <body>
-  <h1>Hi and welcome to the page</h1>
-  <a href="number1.html" class="link-button">Number 1</a>
-  <a href="number2.html" class="link-button">Number 2</a>
+  <div class="container">
+    <h1>Welcome to Anime Vault</h1>
+    <p>Step into a world of epic battles, emotional moments, and iconic characters.<br>
+    Whether you're into Naruto, One Piece, Attack on Titan, or hidden gems — you're in the right place. <br>
+    Click below to explore curated scenes, codes, and clips from your favorite anime episodes!</p>
+
+    <a href="number1.html" class="link-button">Number 1</a> <br>
+    <a href="number2.html" class="link-button">Number 2</a> <br>
+    <a href="number3.html" class="link-button">Number 3</a> <br>
+    <a href="number4.html" class="link-button">Number 4</a> <br>
+    <a href="number4.html" class="link-button">Number 5</a> <br>
+    <a href="number5.html" class="link-button">Number 6</a> <br>
+    <a href="number6.html" class="link-button">Number 7</a> <br>
+    <a href="number7.html" class="link-button">Number 8</a> <br>
+    <a href="number8.html" class="link-button">Number 9</a> <br>
+    <a href="number9.html" class="link-button">Number 10</a> <br>
+    <a href="number10.html" class="link-button">Number 11</a> <br>
+    <a href="number11.html" class="link-button">Number 12</a> <br>
+    <a href="number12.html" class="link-button">Number 13</a> <br>
+    <a href="number13.html" class="link-button">Number 14</a> <br>
+    <a href="number14.html" class="link-button">Number 15</a> <br>
+    <a href="number15.html" class="link-button">Number 16</a> <br>
+  </div>
 </body>
 </html>
+
