--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
 </head>
 <body>
   <div class="container">
-    <h1>Welcome to Anime Vault</h1>
+    <h1>Welcome to Vault</h1>
     <p>Step into a world of epic battles, emotional moments, and iconic characters.<br>
-    Whether you're into Naruto, One Piece, Attack on Titan, or hidden gems — you're in the right place. <br>
+    For hidden gems — you're in the right place. <br>
     Click below to explore curated scenes, codes, and clips from your favorite anime episodes!</p>
 
     <a href="number1.html" class="link-button">Number 1</a> <br>
