--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8194206365588876" crossorigin="anonymous"></script>
-  <title>Anime Hub</title>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8194206365588876" crossorigin="anonymous"></script>
+  <title>Anime Vault</title>
   <style>
     body {
       margin: 0;
@@ -48,6 +47,9 @@
     .link-button:hover {
       background-color: #c2185b;
     }
+    .ad-slot {
+      margin: 30px 0;
+    }
   </style>
 </head>
 <body>
@@ -57,23 +59,65 @@
     For hidden gems — you're in the right place. <br>
     Click below to explore curated scenes, codes, and clips from your favorite anime episodes!</p>
 
+    <!-- Buttons and Ad Slots -->
     <a href="number1.html" class="link-button">Number 1</a> <br>
     <a href="number2.html" class="link-button">Number 2</a> <br>
     <a href="number3.html" class="link-button">Number 3</a> <br>
     <a href="number4.html" class="link-button">Number 4</a> <br>
-    <a href="number4.html" class="link-button">Number 5</a> <br>
-    <a href="number5.html" class="link-button">Number 6</a> <br>
-    <a href="number6.html" class="link-button">Number 7</a> <br>
-    <a href="number7.html" class="link-button">Number 8</a> <br>
-    <a href="number8.html" class="link-button">Number 9</a> <br>
-    <a href="number9.html" class="link-button">Number 10</a> <br>
-    <a href="number10.html" class="link-button">Number 11</a> <br>
-    <a href="number11.html" class="link-button">Number 12</a> <br>
-    <a href="number12.html" class="link-button">Number 13</a> <br>
-    <a href="number13.html" class="link-button">Number 14</a> <br>
-    <a href="number14.html" class="link-button">Number 15</a> <br>
-    <a href="number15.html" class="link-button">Number 16</a> <br>
+
+    <!-- Ad Slot 1 -->
+    <div class="ad-slot">
+      <ins class="adsbygoogle"
+           style="display:block"
+           data-ad-client="ca-pub-8194206365588876"
+           data-ad-slot="1234567890"
+           data-ad-format="auto"
+           data-full-width-responsive="true"></ins>
+      <script>
+           (adsbygoogle = window.adsbygoogle || []).push({});
+      </script>
+    </div>
+
+    <a href="number5.html" class="link-button">Number 5</a> <br>
+    <a href="number6.html" class="link-button">Number 6</a> <br>
+    <a href="number7.html" class="link-button">Number 7</a> <br>
+    <a href="number8.html" class="link-button">Number 8</a> <br>
+
+    <!-- Ad Slot 2 -->
+    <div class="ad-slot">
+      <ins class="adsbygoogle"
+           style="display:block"
+           data-ad-client="ca-pub-8194206365588876"
+           data-ad-slot="1234567891"
+           data-ad-format="auto"
+           data-full-width-responsive="true"></ins>
+      <script>
+           (adsbygoogle = window.adsbygoogle || []).push({});
+      </script>
+    </div>
+
+    <a href="number9.html" class="link-button">Number 9</a> <br>
+    <a href="number10.html" class="link-button">Number 10</a> <br>
+    <a href="number11.html" class="link-button">Number 11</a> <br>
+    <a href="number12.html" class="link-button">Number 12</a> <br>
+
+    <!-- Ad Slot 3 -->
+    <div class="ad-slot">
+      <ins class="adsbygoogle"
+           style="display:block"
+           data-ad-client="ca-pub-8194206365588876"
+           data-ad-slot="1234567892"
+           data-ad-format="auto"
+           data-full-width-responsive="true"></ins>
+      <script>
+           (adsbygoogle = window.adsbygoogle || []).push({});
+      </script>
+    </div>
+
+    <a href="number13.html" class="link-button">Number 13</a> <br>
+    <a href="number14.html" class="link-button">Number 14</a> <br>
+    <a href="number15.html" class="link-button">Number 15</a> <br>
+    <a href="number16.html" class="link-button">Number 16</a> <br>
   </div>
 </body>
 </html>
-
